tests/passing/func-call.c

int func1(int a, char b) {
    return 1;
}

int main() {
    int x;
    x = func1(123, 'b');
}
